--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "meme-generator",
   "version": "0.1.0",
+  "homepage": "http://marvinobig.github.io/meme-generator",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -13,6 +14,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
